--- a/index.html
+++ b/index.html
@@ -282,7 +282,11 @@
 	
 </section>
 <section>
-
+	  <footer class="footer">
+    <div class="footerContainer">
+        <p class="copyright">© 2023 Online Education Platform</p>
+    </div>
+</footer>
 </section>
    
   <script src="script.js"></script>
